--- a/src/App/CommonBundle/Resources/views/Employees/new.html.twig
+++ b/src/App/CommonBundle/Resources/views/Employees/new.html.twig
@@ -1,10 +1,4 @@
 {% extends 'AppT360Bundle::BaseFormPage.html.twig' %}
-
-{% block body -%}
-
-
-            {{ form(form) }}
-
-
-
-{% endblock %}
+    {% block body %}
+                {{ form(form) }}
+    {% endblock %}
