--- a/src/App/CommonBundle/Resources/views/Employees/show.html.twig
+++ b/src/App/CommonBundle/Resources/views/Employees/show.html.twig
@@ -23,7 +23,7 @@
             </tr>
             <tr>
                 <th>Dateembauche</th>
-                <td>{{ entity.dateEmbauche }}</td>
+                <td>{{ entity.dateEmbauche|date('Y-m-d') }}</td>
             </tr>
             <tr>
                 <th>Sexe</th>
