--- a/src/App/CommonBundle/Resources/views/Postes/new.html.twig
+++ b/src/App/CommonBundle/Resources/views/Postes/new.html.twig
@@ -1,6 +1,8 @@
 {% extends 'AppT360Bundle::BaseformPage.html.twig' %}
 
 {% block body -%}
-    <hr/>
-    {{ form(edit_form) }}
+
+
+    {{ form(form) }}
+
 {% endblock %}
