--- a/src/OCUserBundle/Resources/views/Security/login.html.twig
+++ b/src/OCUserBundle/Resources/views/Security/login.html.twig
@@ -28,9 +28,8 @@
         </div>
         <div class="row">
             <div class="col-xs-8">
-                <div class="checkbox icheck">
-
-                </div>
+                <a href="{{ path('register_begin') }}"
+                   class="btn btn-box-tool hvr-grow " >&nbsp; Register</a>
             </div><!-- /.col -->
             <div >
                 <button type="submit" class="btn btn-primary btn-block btn-lg btn-flat">Connexion &nbsp;</button>
