--- a/src/App/T360Bundle/Resources/views/BasePage.html.twig
+++ b/src/App/T360Bundle/Resources/views/BasePage.html.twig
@@ -43,30 +43,30 @@
             <ul class="nav navbar-nav">
                 {% if is_granted("ROLE_ADMIN") %}
                     <!-- Notifications Menu -->
-                    <li class="dropdown notifications-menu">
-                        <!-- Menu toggle button -->
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-bell-o"></i>
-                            <span class="label label-info">10</span>
-                        </a>
+                    {#<li class="dropdown notifications-menu">#}
+                        {#<!-- Menu toggle button -->#}
+                        {#<a href="#" class="dropdown-toggle" data-toggle="dropdown">#}
+                            {#<i class="fa fa-bell-o"></i>#}
+                            {#<span class="label label-info">10</span>#}
+                        {#</a>#}
 
-                        <ul class="dropdown-menu">
-                            <li class="header">You have 10 notifications</li>
-                            <li>
-                                <!-- Inner Menu: contains the notifications -->
-                                <ul class="menu">
-                                    <li><!-- start notification -->
-                                        <a href="#">
-                                            <i class="fa fa-users text-aqua"></i> 5 new members joined today
-                                        </a>
-                                    </li>
-                                    <!-- end notification -->
-                                </ul>
-                            </li>
-                            <li class="footer"><a href="#">View all</a></li>
-                        </ul>
+                        {#<ul class="dropdown-menu">#}
+                            {#<li class="header">You have 10 notifications</li>#}
+                            {#<li>#}
+                                {#<!-- Inner Menu: contains the notifications -->#}
+                                {#<ul class="menu">#}
+                                    {#<li><!-- start notification -->#}
+                                        {#<a href="#">#}
+                                            {#<i class="fa fa-users text-aqua"></i> 5 new members joined today#}
+                                        {#</a>#}
+                                    {#</li>#}
+                                    {#<!-- end notification -->#}
+                                {#</ul>#}
+                            {#</li>#}
+                            {#<li class="footer"><a href="#">View all</a></li>#}
+                        {#</ul>#}
 
-                    </li>
+                    {#</li>#}
                 {% endif %}
                 <!-- User Account Menu -->
                 <li class="dropdown user user-menu">
@@ -85,27 +85,17 @@
                                  alt="User Image"/>
 
                             <p>
-                                {{ app.user.nom }} - {{ app.user.prenom }}- {{ app.user.poste.direction }}
+                               <strong> {{ app.user.nom|capitalize }} - {{ app.user.prenom|capitalize }}</strong> <br/> {{ app.user.poste.direction }}
                                 - {{ app.user.poste.poste }}
-                                <small>Member since Nov. 2012</small>
+
                             </p>
                         </li>
-                        <!-- Menu Body -->
-                        <li class="user-body">
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Followers</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Sales</a>
-                            </div>
-                            <div class="col-xs-4 text-center">
-                                <a href="#">Friends</a>
-                            </div>
-                        </li>
+
+
                         <!-- Menu Footer-->
                         <li class="user-footer">
                             <div class="pull-left">
-                                <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                <a href="{{ path("employees_profile") }}" class="btn btn-default btn-flat">Gestion Profile</a>
                             </div>
                             <div class="pull-right">
                                 <a href="{{ path('logout') }}" class="btn btn-default btn-flat">Sign out</a>
@@ -129,42 +119,34 @@
                 <img src="{{ asset('bundles/AppT360/images/avatar1.jpg') }}" class="img-circle" alt="User Image"/>
             </div>
             <div class="pull-left info">
-                <p>{{ app.user.nom }} - {{ app.user.prenom }}</p>
-                <!-- Status -->
-                <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                <p>{{ app.user.nom|capitalize }} - {{ app.user.prenom|capitalize }}</p>
+
             </div>
         </div>
 
-        <!-- search form (Optional) -->
-        <form action="#" method="get" class="sidebar-form">
-            <div class="input-group">
-                <input type="text" name="q" class="form-control" placeholder="Search..."/>
-              <span class="input-group-btn">
-                <button type='submit' name='search' id='search-btn' class="btn btn-flat"><i class="fa fa-search"></i>
-                </button>
-              </span>
-            </div>
-        </form>
+
         <!-- /.search form -->
 
         <!-- Sidebar Menu -->
         <ul class="sidebar-menu">
-            <li class="header">HEADER</li>
+            <li class="header">LIENS</li>
             <!-- Optionally, you can add icons to the links -->
-            <li class="active"><a href="{{ path("t360evaluations") }}"><span>Evaluations</span></a><</li>
+            <li class="side-click-class"><a href="{{ path("t360evaluations") }}"><span>Evaluations</span></a><</li>
             {% if is_granted('ROLE_ADMIN') %}
-                <li ><a href="{{ path("t360evaluations_for_admin") }}"><span>Remplir les grilles d'évaluations</span></a><</li>
+                <li ><a href="{{ path("t360evaluations_for_admin") }}" class="side-click-class"><span>Remplir les grilles d'évaluations</span></a></li>
+                <li ><a href="{{ path("employees") }}" class="side-click-class"><span>Gestions des employés</span></a></li>
+                <li ><a href="{{ path("directions_postes") }}" class="side-click-class"><span>Gestions des directions et des postes</span></a></li>
                 <li class="treeview">
                     <a href="#"><span>Gestion Evaluations 360°</span> <i
                                 class="fa fa-angle-left pull-right"></i></a>
                     <ul class="treeview-menu">
-                        <li><a href="#">Listes des Evaluations</a></li>
+                        <li><a href="#"  class="side-click-class">Listes des Evaluations</a></li>
                         <li><a href="#" data-toggle="modal" data-target="#new-eval-modal">Ajouter une
                                 évaluations</a></li>
-                        <li><a href="{{ path('t360axes') }}">Gestion des Axes et des questions d'évaluation</a></li>
-                        <li><a href="{{ path('get_directions_results') }}">Resultats d'évaluations par direction</a>
+                        <li><a href="{{ path('t360axes') }}"  class="side-click-class">Gestion des Axes et des questions d'évaluation</a></li>
+                        <li><a href="{{ path('get_directions_results') }}"  class="side-click-class">Resultats d'évaluations par direction</a>
                         </li>
-                        <li><a href="{{ path('get_emplyees_for_historique') }}">Résultats d'évaluation par
+                        <li><a href="{{ path('get_emplyees_for_historique') }}"  class="side-click-class">Résultats d'évaluation par
                                 personnes</a></li>
                     </ul>
                 </li>
