--- a/src/App/T360Bundle/Resources/views/BasePage.html.twig
+++ b/src/App/T360Bundle/Resources/views/BasePage.html.twig
@@ -146,6 +146,8 @@
                         <li><a href="{{ path('t360axes') }}"  class="side-click-class">Gestion des Axes et des questions d'évaluation</a></li>
                         <li><a href="{{ path('get_directions_results') }}"  class="side-click-class">Resultats d'évaluations par direction</a>
                         </li>
+                        <li><a href="{{ path('get_postes_results') }}"  class="side-click-class">Resultats d'évaluations par poste</a>
+                        </li>
                         <li><a href="{{ path('get_emplyees_for_historique') }}"  class="side-click-class">Résultats d'évaluation par
                                 personnes</a></li>
                     </ul>
